--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main role="main">
     <section id="container">
       <div class="container-card">
-        <img src="/images/image-qr-code.png" alt="image qr">
+        <img src="./images/image-qr-code.png" alt="image qr">
         <h2>Improve your front-end <br> skills by building projects</h2>
         <p> Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
       </div>
