--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <main role="main">
+  <main>
     <section id="container">
       <div class="container-card">
         <img src="./images/image-qr-code.png" alt="image qr">
